2006-12-06  Michael Goffioul  <michael.goffioul@swing.be>

	* acx_blas.m4, acx_lapack.m4: Handle f2c calling convention.

2006-12-05  John W. Eaton  <jwe@octave.org>

	* configure.in: Don't check for strptime on *-apple-darwin* systems.

2006-11-28  John W. Eaton  <jwe@octave.org>

	* mkoctfile.in: Construct default output file from basename of
	input file name.

2006-11-28  David Bateman  <dbateman@free.fr>

	* configure.in: Check for sparse header files in the sparsesuite
	sub-directory. In the cholmod tests, include the camd libraries, as
	this might be a dependency for cholmod.

2006-11-15  John W. Eaton  <jwe@octave.org>

	* run-octave.in: Don't forget LD_PRELOAD if there are args.

2006-11-14  John W. Eaton  <jwe@octave.org>

	* configure.in: If warning message is printed, print additional
	final note about missing libraries.

2006-11-13  John W. Eaton  <jwe@octave.org>

	* octave.cc (maximum_braindamage): Disable
	Octave:fopen-file-in-path and Octave:load-file-in-path warnings.

	* run-octave.in: Substitute liboctinterp, liboctave, and libcruft.
	Use them to set LD_PRELOAD.
	* Makeconf.in (do-subst-script-vals): Also substitute
	liboctinterp, liboctave, and libcruft.

2006-11-13  Rafael Laboissiere  <rafael@debian.org>

	* mkoctfile.in: Add -Wl,... options to ldflags, not pass_on_flags.

2006-11-11  John W. Eaton  <jwe@octave.org>

	* examples/Makefile.in (octave.desktop):
	Use $(simple-move-if-change-rule) here.

	* Makeconf.in (simple-move-if-change-rule,
	(builddir-move-if-change-rule): New macros.

2006-11-11  Soren Hauberg  <soren@hauberg.org>

	* examples/Makefile.in (uninstall): Add missing semicolon.

2006-11-09  John W. Eaton  <jwe@octave.org>

	* examples/Makefile.in (uninstall): New target.

2006-11-09  Michael Goffioul  <michael.goffioul@swing.be>

	* configure.in (OCTAVE_LOCAL_BUFFER): Don't access first element
	if size is 0.

2006-11-06  Michael Goffioul  <michael.goffioul@swing.be>
