@@ -1,3 +1,8 @@
+2007-01-08  David Bateman  <dbateman@free.fr>
+
+	* configure.in: Replace sparsesuite with suitesparse to match
+	upstream name.
+
 2006-12-06  Michael Goffioul  <michael.goffioul@swing.be>
 
 	* acx_blas.m4, acx_lapack.m4: Handle f2c calling convention.
